fix(server): openapi fix
